[package]
name = "regular_polygon_plot"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30.0"
eframe = "0.30.0"
egui_extras = "0.30.0"
imageproc = "0.25.0"
rusttype = "0.9.3"

[dependencies.image]
version = "0.25.5"
default-features = false
features = [
    "jpeg",
    "png",
    "bmp",
    "tiff"
]